--- a/argocd-app.yaml
+++ b/argocd-app.yaml
@@ -1,19 +1,23 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: argoproj.io/v1alpha1
+kind: Application
 metadata:
-  name: nginx-deploy-1
-  labels:
-    app: nginx
+  name: my-first-app
+  namespace: argocd  # ArgoCD watches this namespace for Application CRs
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: nginx
-  template:
-    metadata:
-      labels:
-        app: nginx
-    spec:
-      containers:
-      - name: nginx-container
-        image: nginx:latest
+  project: default
+
+  source:
+    repoURL: 'https://github.com/crestrepop81/ArgoCD_first.git'
+    targetRevision: HEAD
+    path: .  # assuming the manifests are in the root directory
+
+  destination:
+    server: 'https://kubernetes.default.svc'
+    namespace: default  # change if your app should deploy to a different namespace
+
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
