--- a/argocd-app.yaml
+++ b/argocd-app.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: 'https://github.com/crestrepop81/ArgoCD_first.git'
     targetRevision: HEAD
-    path: .
+    path: manifests
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: default
